src/objects/Care_Plan_Step_Template__c.object
<CustomObject>
    <description>When a standard care plan is created and the care plan objective template used, these steps are also copied to the new care plan</description>
    <fields>
        <fullName>Care_Plan_Obj_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Obj Template</label>
        <referenceTo>Care_Plan_Obj_Template__c</referenceTo>
        <relationshipLabel>Care Plan Step Templates</relationshipLabel>
        <relationshipName>Care_Plan_Step_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creation_Order__c</fullName>
        <inlineHelpText>This is the order the steps will be created in, to all the &quot;What step needs to happen first&quot; step to exist when this step is created</inlineHelpText>
        <label>Creation Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_this_step__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Tick to include this step in the care plan</inlineHelpText>
        <label>Include this step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_step_needs_to_happen_first__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What care plan step needs to happen first?</inlineHelpText>
        <label>What step needs to happen first</label>
        <referenceTo>Care_Plan_Step_Template__c</referenceTo>
        <relationshipLabel>Care plan steps</relationshipLabel>
        <relationshipName>Care_plan_steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Care Plan Step Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Care_Plan_Obj_Template__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>What_step_needs_to_happen_first__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPST-{0000}</displayFormat>
        <label>Care Plan Step Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Plan Step Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>